added search bar to dashboard

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -10,7 +10,7 @@
       <div class="carousel-caption">
         <h3>The ultimate one-stop home food solution</h3>
         <!--        <p>Easily order for your next meeting or event</p>-->
-        <button class="btn btn-danger">Become a home-chef</button>
+        <button class="btn btn-danger" (click)="goToLogin()">Become a home-chef</button>
       </div>
     </div>
     <div class="carousel-item">
@@ -18,7 +18,7 @@
       <div class="carousel-caption">
         <h3>The ultimate one-stop home food solution</h3>
         <!--        <p>Easily order for your next meeting or event</p>-->
-        <button class="btn btn-danger">Become a Foody</button>
+        <button class="btn btn-danger" (click)="goToLogin()">Become a Foody</button>
       </div>
     </div>
     <div class="carousel-item">
@@ -26,7 +26,7 @@
       <div class="carousel-caption">
         <h3>The ultimate one-stop home food solution</h3>
         <!--        <p class="text-primary">Easily order for your next meeting or event</p>-->
-        <button class="btn btn-danger">Become a Rider</button>
+        <button class="btn btn-danger" (click)="goToLogin()">Become a Rider</button>
       </div>
     </div>
   </div>
