--- a/src/assets/scss/secure.scss
+++ b/src/assets/scss/secure.scss
@@ -385,7 +385,7 @@ body {
   //padding-left: 0;
   //padding-top: 20px;
   > div {
-    padding: 20px 40px;
+    //padding: 20px 40px;
     height: calc(100vh - 90px);
     overflow-y: scroll;
 
