added swiper for view list

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Yeseva+One&display=swap');
+@import '~swiper/css/swiper.min.css';
 
 * {
   -webkit-user-select: none; /* Safari */
