added food item list

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-md bg-black fixed-top">
-    <div class="container">
+    <div class="container-fluid">
       <a class="band-logo font-weight-bold" routerLink="/public/home">
         <span class="fa fa-themeisle"></span>
         Belicious
