--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="feature col-md-12">
-          <app-food-list></app-food-list>
+          <app-kitchen-list></app-kitchen-list>
         </div>
 
       </div>
