--- a/src/app/secure/secure.component.html
+++ b/src/app/secure/secure.component.html
@@ -19,7 +19,7 @@
           <!--          </li>-->
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white" href="#" id="profile"
+            <a class="nav-link dropdown-toggle text-white text-uppercase" href="#" id="profile"
                role="button" data-toggle="dropdown"
                aria-haspopup="true" aria-expanded="false">{{user.first_name}} {{user.last_name}}
             </a>
