--- a/src/app/common/kitchen-card/kitchen-card.component.html
+++ b/src/app/common/kitchen-card/kitchen-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card table-hover">
   <div class="media p-2">
     <div class="media-body d-flex">
       <div class="figure-img">
@@ -7,14 +7,23 @@
       </div>
       <div class="text-left px-3 w-100">
         <p class="m-0">Apple iPhone XS (Silver, 64 GB)</p>
-        <small class="font-italic text-muted m-0">Indian, Halal | Raffels Place, Singapore</small>
+        <p class="m-0 small tags">
+          <span class="badge badge-primary">Indian</span>
+          <span class="badge badge-secondary">Halal</span>
+          <span class="badge badge-success">Home-Cook</span>
+        </p>
+        <p class="m-0 small">
+          <span class="fa fa-location-arrow text-danger"></span> Raffels Place, Singapore
+        </p>
         <p class="m-0 small">
           <span class="fa fa-star text-success"></span> 3.5
+        </p>
+        <p class="m-0 small">
           <span class="fa fa-clock-o text-info"></span> 1 Km away
         </p>
-        <div class="py-2 d-flex justify-content-end">
-          <button class="btn btn-danger btn-sm">View Kitchen</button>
-        </div>
+        <!--        <div class="py-2 d-flex justify-content-end">-->
+        <!--          <button class="btn btn-danger btn-sm">View Kitchen</button>-->
+        <!--        </div>-->
       </div>
     </div>
   </div>
