--- a/src/styles.scss
+++ b/src/styles.scss
@@ -348,3 +348,9 @@ label {
     padding: 0;
   }
 }
+
+
+.card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  cursor: pointer;
+}
