fix hover on card

--- a/src/app/common/kitchen-card/kitchen-card.component.html
+++ b/src/app/common/kitchen-card/kitchen-card.component.html
@@ -1,4 +1,4 @@
-<div class="card table-hover">
+<div class="card h-card">
   <div class="media p-2">
     <div class="media-body d-flex">
       <div class="figure-img">
