--- a/src/app/common/kitchen-card/kitchen-card.component.scss
+++ b/src/app/common/kitchen-card/kitchen-card.component.scss
@@ -4,3 +4,8 @@
     margin: 0 3px;
   }
 }
+
+.h-card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  cursor: pointer;
+}
