--- a/src/styles.scss
+++ b/src/styles.scss
@@ -290,9 +290,7 @@ label {
 
 .feature {
   position: relative;
-  //padding: 16px;
-  //width: 388px;
-  //max-width: 388px;
+  padding: 5px 0;
   flex-grow: 1;
 
   &-wrap {
