--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -116,10 +116,12 @@
     <h1 class="text-center sb-text-primary mb-4">Our meal offerings</h1>
     <div class="features-inner section-inner">
       <div class="row flex-center">
+
         <div class="feature col-md-4">
           <div class="feature-inner">
-            <div class="feature-icon"><img
-              src="assets/images/online-payment.svg"></div>
+            <div class="feature-icon">
+              <img src="assets/images/online-payment.svg">
+            </div>
             <h4 class="feature-title h3-mobile mb-8">Bangladeshi Food</h4>
             <p class="sb-text-cancel"><b>Dine together</b> with your
               colleagues, organize your next <b>meeting</b> or set up a big <b
@@ -163,6 +165,7 @@
             </div>
           </div>
         </div>
+
         <div class="feature col-md-4">
           <div class="feature-inner">
             <div class="feature-icon"><img
@@ -178,6 +181,7 @@
             </div>
           </div>
         </div>
+
         <div class="feature col-md-4">
           <div class="feature-inner">
             <div class="feature-icon"><img
@@ -193,6 +197,7 @@
             </div>
           </div>
         </div>
+
         <div class="feature col-md-4">
           <div class="feature-inner">
             <div class="feature-icon"><img
