--- a/src/app/common/kitchen-list/kitchen-list.component.html
+++ b/src/app/common/kitchen-list/kitchen-list.component.html
@@ -10,6 +10,6 @@
 
 <div class="row">
   <div class="col-lg-6 my-1" *ngFor="let kitchen of kitchenList$">
-    <app-kitchen-card (click)="goToFoodList(kitchen)"></app-kitchen-card>
+    <app-kitchen-card (click)="goToFoodList(kitchen)" class="card h-card"></app-kitchen-card>
   </div>
 </div>
