--- a/src/app/secure/secure.component.html
+++ b/src/app/secure/secure.component.html
@@ -90,6 +90,14 @@
             </a>
           </li>
 
+
+          <li class="sidebar-dropdown">
+            <a routerLink="/secure/add-kitchen" routerLinkActive="active">
+              <i class="fa fa-shopping-cart"></i>
+              <span>Add Kitchen</span>
+            </a>
+          </li>
+
           <li class="header-menu">
             <span>Extra</span>
           </li>
@@ -135,8 +143,9 @@
       </a>
     </div>
   </nav>
+
   <div class="page-content secure">
-    <div class="container-fluid">
+    <div class="container-fluid pt-4">
       <router-outlet></router-outlet>
     </div>
     <footer class="bg-light footer-big">
