--- a/src/app/public/join/join.component.html
+++ b/src/app/public/join/join.component.html
@@ -17,10 +17,14 @@
             <div class="form-group col-md-6">
               <label>First Name <sup>*</sup></label>
               <input class="form-control" type="text" formControlName="fName">
+              <small class="text-danger" *ngIf="joinForm.get('fName').invalid && joinForm.get('fName').touched">Please
+                enter first name.</small>
             </div>
             <div class="form-group col-md-6">
               <label>Last Name <sup>*</sup></label>
               <input class="form-control" type="text" formControlName="lName">
+              <small class="text-danger" *ngIf="joinForm.get('lName').invalid && joinForm.get('lName').touched">Please
+                enter last name.</small>
             </div>
           </div>
 
@@ -29,6 +33,8 @@
             <div class="form-group col-md-12">
               <label>Email Address <sup>*</sup></label>
               <input class="form-control" required="required" type="text" formControlName="email">
+              <small class="text-danger" *ngIf="joinForm.get('email').invalid && joinForm.get('email').touched">Please
+                enter valid email.</small>
             </div>
           </div>
 
@@ -36,6 +42,8 @@
             <div class="form-group col-md-12">
               <label>Password <sup>*</sup></label>
               <input class="form-control" required="required" type="password" formControlName="password">
+              <small class="text-danger" *ngIf="joinForm.get('password').invalid && joinForm.get('password').touched">Please
+                enter valid email.</small>
             </div>
           </div>
 
@@ -49,7 +57,7 @@
                     <input type="radio" name="options" autocomplete="off" checked="checked"> Male
                   </label>
 
-                  <label class="btn btn-sm btn-outline-success" [ngClass]="{active : gender == 'female'}"
+                  <label class="btn bemailtn-sm btn-outline-success" [ngClass]="{active : gender == 'female'}"
                          (click)="onGenderChange('female')">
                     <input type="radio" name="options" autocomplete="off"> Female
                   </label>
