--- a/src/app/secure/secure.component.html
+++ b/src/app/secure/secure.component.html
@@ -90,7 +90,9 @@
             </a>
           </li>
 
-
+          <li class="header-menu">
+            <span>Chef</span>
+          </li>
           <li class="sidebar-dropdown">
             <a routerLink="/secure/add-kitchen" routerLinkActive="active">
               <i class="fa fa-shopping-cart"></i>
@@ -98,16 +100,13 @@
             </a>
           </li>
 
-          <li class="header-menu">
-            <span>Extra</span>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-book"></i>
-              <span>Documentation</span>
-              <!--              <span class="badge badge-pill badge-primary">Beta</span>-->
+          <li class="sidebar-dropdown">
+            <a routerLink="/secure/my-kitchen" routerLinkActive="active">
+              <i class="fa fa-file-code-o"></i>
+              <span>My Kitchen</span>
             </a>
           </li>
+
           <li>
             <a href="#">
               <i class="fa fa-calendar"></i>
