added dashboard api

--- a/src/app/common/kitchen-card/kitchen-card.component.html
+++ b/src/app/common/kitchen-card/kitchen-card.component.html
@@ -11,7 +11,8 @@
       </p>
       <p class="m-0 small">
         <span
-          class="fa fa-location-arrow text-warning"></span> {{kitchen.kitchen_address.address}}, {{kitchen.kitchen_address.city}}, {{kitchen.kitchen_address.state}}
+          class="fa fa-location-arrow text-warning"></span> {{kitchen.kitchen_address.address}}
+        , {{kitchen.kitchen_address.city}}, {{kitchen.kitchen_address.state}}
         - {{kitchen.kitchen_address.zip_code}}
       </p>
       <p class="m-0 small">
