--- a/src/app/secure/food-list/food-list.component.html
+++ b/src/app/secure/food-list/food-list.component.html
@@ -4,16 +4,16 @@
     <div class="card-header">
 
       Kitchen - Test
-<!--      <div class="input-group adv-search">-->
-<!--        <input type="text" class="form-control" placeholder="Find your location"/>-->
-<!--        <div class="input-group-btn">-->
-<!--          <div class="btn-group" role="group">-->
-<!--            <button type="button" class="btn btn-primary">-->
-<!--              <span class="fa fa-location-arrow" aria-hidden="true"></span>-->
-<!--            </button>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
+      <!--      <div class="input-group adv-search">-->
+      <!--        <input type="text" class="form-control" placeholder="Find your location"/>-->
+      <!--        <div class="input-group-btn">-->
+      <!--          <div class="btn-group" role="group">-->
+      <!--            <button type="button" class="btn btn-primary">-->
+      <!--              <span class="fa fa-location-arrow" aria-hidden="true"></span>-->
+      <!--            </button>-->
+      <!--          </div>-->
+      <!--        </div>-->
+      <!--      </div>-->
 
     </div>
     <div class="card-body">
@@ -31,7 +31,7 @@
       </div>
       <div class="row">
         <div class="feature col-md-12">
-          <app-kitchen-list></app-kitchen-list>
+          Food LIST VIEW
         </div>
 
       </div>
