--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -36,7 +36,22 @@
       </div>
 
       <div class="feature col-md-12">
-        <app-kitchen-list></app-kitchen-list>
+        <div class="food-list-title">
+          <div class="left text-dark">
+            <h6>More Kitchens</h6>
+            <small class="text-secondary">We have got you covered</small>
+          </div>
+          <div class="right text-secondary">
+            <a href="#">View all</a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6 my-1" *ngFor="let kitchen of kitchens$ | async">
+            <app-kitchen-card (click)="goToFoodList(kitchen)" [kitchen]="kitchen"
+                              class="card h-card"></app-kitchen-card>
+          </div>
+        </div>
       </div>
 
     </div>
