--- a/src/app/secure/my-food/my-food.component.html
+++ b/src/app/secure/my-food/my-food.component.html
@@ -1,1 +1,40 @@
-<p>my-food works!</p>
+<section class="features section text-center sb-app-c6">
+
+  <div class="card">
+    <div class="card-header">
+
+      Kitchen Name - Test | add sort by
+      <!--      <div class="input-group adv-search">-->
+      <!--        <input type="text" class="form-control" placeholder="Find your location"/>-->
+      <!--        <div class="input-group-btn">-->
+      <!--          <div class="btn-group" role="group">-->
+      <!--            <button type="button" class="btn btn-primary">-->
+      <!--              <span class="fa fa-location-arrow" aria-hidden="true"></span>-->
+      <!--            </button>-->
+      <!--          </div>-->
+      <!--        </div>-->
+      <!--      </div>-->
+
+    </div>
+    <div class="card-body">
+      <div class="card-title">
+        <div class="input-group adv-search">
+          <input type="text" class="form-control" placeholder="Kitchen, dishes, cuisines"/>
+          <div class="input-group-btn">
+            <div class="btn-group" role="group">
+              <button type="button" class="btn btn-primary">
+                <span class="fa fa-search" aria-hidden="true"></span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="feature col-md-12">
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
