--- a/src/app/public/forget-password/forget-password.component.html
+++ b/src/app/public/forget-password/forget-password.component.html
@@ -12,19 +12,15 @@
       </div>
       <div class="col-md-6 py-5 border">
         <h4 class="pb-4">Please fill with your details</h4>
-        <form [formGroup]="loginFrom">
+        <form [formGroup]="forgetPasswordFrom">
           <div class="form-group">
             <label>Email <sub>*</sub></label>
             <input type="text" class="form-control" placeholder="email" formControlName="email">
           </div>
           <div class="form-row pull-right">
-            <button class="btn btn-primary" (click)="login()">Submit</button>
+            <button class="btn btn-primary" (click)="submit()">Submit</button>
           </div>
         </form>
-
-        <div class="form-row pl-3">
-          <a href="#">Forgot Password?</a>
-        </div>
 
         <div class="p-3 text-center">
           Don't you have an account? <a [routerLink]="['/public/join-us']">Join Now</a>
