fix some ui issues and move scroll

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -180,6 +180,10 @@
       <!-- end /.row -->
     </div>
     <!-- end /.container -->
+    <div class="go_top" (click)="onActivate($event)" [class.d-none]="goToTopShow">
+      <span class="fa fa-arrow-up"></span>
+    </div>
+
 
     <div class="mini-footer">
       <div class="container">
