--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <div class="input-group adv-search">
+    <div class="input-group tag-input">
       <input type="text" class="form-control" placeholder="Find your location"/>
       <div class="input-group-btn">
         <div class="btn-group" role="group">
@@ -13,7 +13,7 @@
   </div>
   <div class="card-body">
     <div class="card-title">
-      <div class="input-group adv-search">
+      <div class="input-group tag-input">
         <input type="text" class="form-control" placeholder="Kitchen, dishes, cuisines"/>
         <div class="input-group-btn">
           <div class="btn-group" role="group">
