--- a/src/app/secure/my-food/my-food.component.html
+++ b/src/app/secure/my-food/my-food.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="card-body">
       <div class="card-title">
-        <div class="input-group adv-search">
+        <div class="input-group tag-input">
           <input type="text" class="form-control" placeholder="Kitchen, dishes, cuisines"/>
           <div class="input-group-btn">
             <div class="btn-group" role="group">
