--- a/src/styles.scss
+++ b/src/styles.scss
@@ -355,3 +355,21 @@ label {
 section {
   padding: 5rem 0;
 }
+
+
+.tag-input {
+  .btn-group .btn {
+    border-radius: 0;
+    margin-left: -1px;
+  }
+
+  .btn-group .btn:last-child {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
+
+  .btn-group .form-horizontal .btn[type="submit"] {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+}
