--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
       <input type="text" class="form-control" placeholder="Find your location"/>
       <div class="input-group-btn">
         <div class="btn-group" role="group">
-          <button type="button" class="btn btn-primary">
+          <button type="button" class="btn btn-success">
             <span class="fa fa-location-arrow" aria-hidden="true"></span>
           </button>
         </div>
@@ -12,19 +12,20 @@
     </div>
   </div>
   <div class="card-body">
-    <div class="card-title">
-      <div class="input-group tag-input">
-        <input type="text" class="form-control" placeholder="Kitchen, dishes, cuisines"/>
-        <div class="input-group-btn">
-          <div class="btn-group" role="group">
-            <button type="button" class="btn btn-primary">
-              <span class="fa fa-search" aria-hidden="true"></span>
-            </button>
+
+    <div class="row">
+      <div class="col-md-12 px-3">
+        <div class="input-group tag-input">
+          <input type="text" class="form-control" placeholder="Kitchen, dishes, cuisines"/>
+          <div class="input-group-btn">
+            <div class="btn-group" role="group">
+              <button type="button" class="btn btn-info">
+                <span class="fa fa-search" aria-hidden="true"></span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
 
       <div class="feature col-md-12">
         <app-swiper></app-swiper>
