--- a/src/app/common/swiper/swiper.component.html
+++ b/src/app/common/swiper/swiper.component.html
@@ -8,18 +8,22 @@
   </div>
 </div>
 
+<!---->
+
 <swiper [config]="config">
   <div class="swiper-wrapper">
-    <div class="swiper-slide">Slide 1</div>
-    <div class="swiper-slide">Slide 2</div>
-    <div class="swiper-slide">Slide 3</div>
-    <div class="swiper-slide">Slide 4</div>
-    <div class="swiper-slide">Slide 5</div>
-    <div class="swiper-slide">Slide 6</div>
-    <div class="swiper-slide">Slide 7</div>
-    <div class="swiper-slide">Slide 8</div>
-    <div class="swiper-slide">Slide 9</div>
-    <div class="swiper-slide">Slide 10</div>
+    <div class="swiper-slide" *ngFor="let item of swiperItem">
+      <a [routerLink]="item.url" class="swiper-link">
+        <div class="card">
+          <img class="card-img-top" src="/assets/our-team/avatar-1_s02nlg.png"
+               alt="Card image cap" height="160">
+          <div class="card-body p-0 d-flex flex-column">
+            <span class="card-text">Some quick content.</span>
+            <small class="card-text">Some quick content.</small>
+          </div>
+        </div>
+      </a>
+    </div>
   </div>
   <!-- Add Pagination -->
   <div class="swiper-pagination"></div>
