--- a/src/app/secure/my-food/my-food.component.html
+++ b/src/app/secure/my-food/my-food.component.html
@@ -1,40 +1,54 @@
-<section class="features section text-center sb-app-c6">
-
-  <div class="card">
-    <div class="card-header">
-
-      Kitchen Name - Test | add sort by
-      <!--      <div class="input-group adv-search">-->
-      <!--        <input type="text" class="form-control" placeholder="Find your location"/>-->
-      <!--        <div class="input-group-btn">-->
-      <!--          <div class="btn-group" role="group">-->
-      <!--            <button type="button" class="btn btn-primary">-->
-      <!--              <span class="fa fa-location-arrow" aria-hidden="true"></span>-->
-      <!--            </button>-->
-      <!--          </div>-->
-      <!--        </div>-->
-      <!--      </div>-->
-
+<div class="card">
+  <div class="card-header">
+    <div class="food-title">
+      <div class="left text-dark">
+        <h6>Robin's kitchen food</h6>
+      </div>
+      <div class="right text-secondary">
+        <a routerLink="/secure/my-kitchen/1/add-food" class="text-infoadd">Add new Food Item</a>
+      </div>
     </div>
-    <div class="card-body">
-      <div class="card-title">
+  </div>
+
+  <div class="card-body">
+
+    <div class="row">
+      <div class="col-md-12 px-3">
         <div class="input-group tag-input">
           <input type="text" class="form-control" placeholder="Kitchen, dishes, cuisines"/>
           <div class="input-group-btn">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-primary">
+              <button type="button" class="btn btn-info">
                 <span class="fa fa-search" aria-hidden="true"></span>
               </button>
             </div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="feature col-md-12">
 
+      <div class="feature col-md-12">
+        <app-swiper></app-swiper>
+      </div>
+
+      <div class="feature col-md-12">
+        <div class="food-list-title">
+          <div class="left text-dark">
+            <h6>More Kitchens</h6>
+            <small class="text-secondary">We have got you covered</small>
+          </div>
+          <div class="right text-secondary">
+            <a href="#">View all</a>
+          </div>
         </div>
 
+        <div class="row">
+          <!--          <div class="col-lg-6 my-1" *ngFor="let kitchen of kitchens$ | async">-->
+          <!--            <app-kitchen-card (click)="goToFoodList(kitchen)" [kitchen]="kitchen"-->
+          <!--                              class="card h-card"></app-kitchen-card>-->
+          <!--          </div>-->
+        </div>
       </div>
+
     </div>
   </div>
-</section>
+</div>
