--- a/src/styles.scss
+++ b/src/styles.scss
@@ -373,3 +373,26 @@ section {
     border-bottom-left-radius: 4px;
   }
 }
+
+.food-list-title {
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
+
+  .left {
+    text-align: left;
+
+    h6 {
+      margin-bottom: 0;
+    }
+  }
+
+  .right {
+    padding-top: 15px;
+    padding-right: 10px;
+
+    a {
+      font-size: 12px;
+    }
+  }
+}
