--- a/src/app/secure/my-food/my-food.component.html
+++ b/src/app/secure/my-food/my-food.component.html
@@ -42,10 +42,42 @@
         </div>
 
         <div class="row">
-          <!--          <div class="col-lg-6 my-1" *ngFor="let kitchen of kitchens$ | async">-->
-          <!--            <app-kitchen-card (click)="goToFoodList(kitchen)" [kitchen]="kitchen"-->
-          <!--                              class="card h-card"></app-kitchen-card>-->
-          <!--          </div>-->
+          <div class="col-lg-6 my-1" *ngFor="let food of kitchen.foods ">
+            <div class="media p-2">
+              <div class="media-body d-flex">
+                <div class="figure-img">
+                  <img src="https://images-na.ssl-images-amazon.com/images/I/61UXPmnTC9L._SL1024_.jpg"
+                       width="60">
+                </div>
+                <div class="text-left px-3 w-100">
+                  <p class="m-0">{{food.name}}</p>
+
+                  <p class="m-0 small ingredients">
+                    <span class="badge badge-info"
+                          *ngFor="let ingredient of food.ingredients">{{ingredient.name}}</span>
+                  </p>
+
+                  <p class="m-0 small">
+                    <span class="fa fa-star text-success"></span> {{food.category}}
+                  </p>
+                  <p class="m-0 small">
+                    <span class="fa fa-money text-danger"></span> {{food.price}}
+                  </p>
+                  <p class="m-0 small">
+                    <span class="fa fa-list text-info"></span> {{food.reciepe}}
+                  </p>
+
+                  <p class="m-0 small">
+                    <span class="fa fa-info text-secondary"></span> {{food.description}}
+                  </p>
+                  <!--        <div class="py-2 d-flex justify-content-end">-->
+                  <!--          <button class="btn btn-danger btn-sm">View Kitchen</button>-->
+                  <!--        </div>-->
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
 
