--- a/src/app/secure/my-food/my-food.component.html
+++ b/src/app/secure/my-food/my-food.component.html
@@ -5,7 +5,8 @@
         <h6>Robin's kitchen food</h6>
       </div>
       <div class="right text-secondary">
-        <a routerLink="/secure/my-kitchen/1/add-food" class="text-infoadd">Add new Food Item</a>
+        <a routerLink="/secure/my-kitchen/{{goToFoodMenu() | async}}/add-food" class="text-infoadd">Add new Food
+          Item</a>
       </div>
     </div>
   </div>
